--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,35 @@
 body {
   background-color: rgba(240, 246, 252, 0.877);
 }
+
+.carousel img {
+  height: 350px;
+}
+
+.notice_img {
+  overflow: hidden;
+  max-width: 400px;
+  width: 100%;
+  max-width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.notice_title {
+  min-width: 300px;
+}
+
+.notice_body {
+  overflow: hidden;
+  max-width: 250px;
+  width: 100%;
+  max-width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.spotify_list {
+  width: 100%;
+  height: 500px;
+  border-radius: 12px;
+}
