--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,6 +6,10 @@ body {
   height: 350px;
 }
 
+.notice {
+  height: 70%;
+}
+
 .notice_img {
   overflow: hidden;
   max-width: 400px;
@@ -24,7 +28,7 @@ body {
   max-width: 250px;
   width: 100%;
   max-width: 100%;
-  height: 300px;
+  height: 50%;
   object-fit: cover;
 }
 
@@ -32,4 +36,109 @@ body {
   width: 100%;
   height: 500px;
   border-radius: 12px;
+}
+
+/*NAVBAR*/
+ul.topnav {
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #a6d5ff;
+}
+
+ul.topnav li {
+  float: left;
+}
+
+ul.topnav li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {
+  background-color: #1352ff;
+}
+
+ul.topnav li a.active {
+  background-color: #0042dc;
+  color: white;
+}
+
+ul.topnav li.right {
+  float: right;
+}
+
+/*footer*/
+.footer {
+  padding: 40px 0;
+  background-color: rgb(13, 110, 253);
+  color: #1b1919;
+}
+
+.footer ul {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.footer li {
+  padding: 0 10px;
+}
+
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul a:hover {
+  opacity: 1;
+}
+
+.footer .social {
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.footer .social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #1b1919;
+  margin: 0 8px;
+  color: inherit;
+  opacity: 0.75;
+}
+
+.footer .social > a:hover {
+  opacity: 0.9;
+}
+
+.footer .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #aaa;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right,
+  ul.topnav li {
+    float: none;
+  }
 }
