--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,7 +7,8 @@ body {
 }
 
 .notice {
-  height: 70%;
+  height: 720px;
+  justify-content: center;
 }
 
 .notice_img {
@@ -25,11 +26,8 @@ body {
 
 .notice_body {
   overflow: hidden;
-  max-width: 250px;
   width: 100%;
-  max-width: 100%;
-  height: 50%;
-  object-fit: cover;
+  height: 280px;
 }
 
 .spotify_list {
@@ -136,9 +134,108 @@ ul.topnav li.right {
   margin-bottom: 0;
 }
 
+.principal_notice .principal_img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  justify-content: center;
+}
+
+.principal_notice .principal_img img {
+  border: 0.5px solid black;
+  border-radius: 5px;
+}
+
+.secondary_img {
+  margin-top: 10px;
+  height: 180px;
+  object-fit: cover;
+  overflow: hidden;
+  justify-content: center;
+}
+
+.secondary_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 2px;
+  border: 0.5px solid rgb(194, 194, 194);
+}
+
+.notice_container {
+  height: 320px;
+  justify-content: center;
+}
+.notice_container h6 {
+  height: 60px;
+}
+
+@media screen and (max-width: 990px) {
+  .principal_notice .principal_img {
+    width: 500px;
+    height: 330px;
+  }
+
+  .notice_container h6 {
+    height: 50px;
+    width: 350px;
+  }
+
+  .secondary_img {
+    width: 330px;
+    height: 200px;
+  }
+
+  .notice {
+    height: 600px;
+  }
+
+  .notice_body {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .principal_notice .principal_img {
+    width: 480px;
+    height: 340px;
+  }
+
+  .notice_container {
+    height: 410px;
+  }
+
+  .notice_container h6 {
+    height: 40px;
+    width: 500px;
+  }
+  .secondary_img {
+    width: 500px;
+    height: 300px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   ul.topnav li.right,
   ul.topnav li {
     float: none;
+  }
+
+  .notice_container {
+    width: 450px;
+    height: 360px;
+  }
+
+  .notice_container h6 {
+    height: 60px;
+    width: 450px;
+  }
+
+  .secondary_img {
+    width: 450px;
+    height: 250px;
+  }
+  .carousel img {
+    height: 200px;
   }
 }
