--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,36 +6,6 @@ body {
   height: 350px;
 }
 
-.notice {
-  height: 720px;
-  justify-content: center;
-}
-
-.notice_img {
-  overflow: hidden;
-  max-width: 400px;
-  width: 100%;
-  max-width: 100%;
-  height: 300px;
-  object-fit: cover;
-}
-
-.notice_title {
-  min-width: 300px;
-}
-
-.notice_body {
-  overflow: hidden;
-  width: 100%;
-  height: 280px;
-}
-
-.spotify_list {
-  width: 100%;
-  height: 500px;
-  border-radius: 12px;
-}
-
 /*NAVBAR*/
 ul.topnav {
   justify-content: center;
@@ -134,6 +104,38 @@ ul.topnav li.right {
   margin-bottom: 0;
 }
 
+/*index*/
+.notice {
+  height: 720px;
+  justify-content: center;
+}
+
+.notice_img {
+  overflow: hidden;
+  max-width: 400px;
+  width: 100%;
+  max-width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.notice_title {
+  min-width: 300px;
+}
+
+.notice_body {
+  overflow: hidden;
+  width: 100%;
+  height: 280px;
+}
+
+.spotify_list {
+  width: 100%;
+  height: 600px;
+  border-radius: 12px;
+}
+
+/*latest_news*/
 .principal_notice .principal_img {
   width: 300px;
   height: 200px;
