--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -136,6 +136,11 @@ ul.topnav li.right {
 }
 
 /*latest_news*/
+.principal_notice {
+  width: 100%;
+  height: 100%;
+}
+
 .principal_notice .principal_img {
   width: 300px;
   height: 200px;
@@ -170,6 +175,11 @@ ul.topnav li.right {
 }
 .notice_container h6 {
   height: 60px;
+}
+
+.video_container iframe {
+  height: 200px;
+  width: 340px;
 }
 
 @media screen and (max-width: 990px) {
