reestructuracion de estilos en sass

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,3 +1,7 @@
-$primary-color: rgb(13, 110, 253);
-$primary-color-dark:#1352ff;
-$primary-color-light:#a6d5ff;
+$primary-color: #3777ff;
+$primary-color-dark:#1955fd;
+$primary-color-light:#87c6fd;
+
+$secondary-color: #32936F;
+$secondary-color-dark: #0d754f;
+$secondary-color-light: #4bb990;
