--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,10 @@ body {
   background-color: rgba(240, 246, 252, 0.877);
 }
 
+h1 {
+  font-size: 28px;
+}
+
 .carousel img {
   height: 350px;
 }
@@ -17,6 +21,12 @@ ul.topnav {
   overflow: hidden;
   display: flex;
   background-color: #87c6fd;
+}
+@media (max-width: 600px) {
+  ul.topnav {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 ul.topnav li {
   float: left;
@@ -42,6 +52,11 @@ ul.topnav li a.active {
 @media (max-width: 600px) {
   ul.topnav li a {
     font-size: 10px;
+  }
+}
+@media (max-width: 600px) {
+  ul.topnav li {
+    float: none;
   }
 }
 ul.topnav li.right {
@@ -218,6 +233,24 @@ ul.topnav li.right {
   width: 320px;
 }
 
+/* CONTACTO */
+.form_input {
+  border-radius: 10px;
+  line-height: 10px;
+  background-color: transparent;
+  border: 2px solid #1955fd;
+  transition: all 0.5s ease-in-out;
+  padding: 10px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: 0;
+}
+.form_input:focus {
+  border: 2px solid #0d754f;
+}
+
+/* CONTACTO */
 @media screen and (max-width: 990px) {
   .principal_notice .principal_img {
     width: 500px;
@@ -244,7 +277,8 @@ ul.topnav li.right {
     height: 340px;
   }
   .notice_container {
-    height: 410px;
+    width: auto;
+    height: 450px;
   }
   .notice_container h6 {
     height: 40px;
@@ -257,7 +291,7 @@ ul.topnav li.right {
 }
 @media screen and (max-width: 600px) {
   .notice_container {
-    width: 450px;
+    width: auto;
     height: 390px;
   }
   .notice_container h6 {
@@ -267,6 +301,27 @@ ul.topnav li.right {
   .secondary_img {
     width: 450px;
     height: 250px;
+  }
+  .carousel img {
+    height: 200px;
+  }
+}
+@media screen and (max-width: 428px) {
+  .principal_notice .principal_img {
+    width: 480px;
+    height: 260px;
+  }
+  .notice_container h6 {
+    height: 60px;
+    width: 100%;
+  }
+  .secondary_img {
+    width: 100%;
+    height: 240px;
+  }
+  .video_container iframe {
+    height: 200px;
+    width: 280px;
   }
   .carousel img {
     height: 200px;
