--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,10 +1,17 @@
 @import "colors.scss";
 @import "fonts.scss";
-
+* {
+  padding: 0px;
+  margin: 0;
+}
 body {
   background-color: rgba(240, 246, 252, 0.877);
+  overflow-x: hidden;
 }
-
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
 h1 {
   font-size: 28px;
 }
@@ -25,8 +32,7 @@ ul.topnav {
   display: flex;
   background-color: $primary-color-light;
   @media (max-width: 600px) {
-    flex-direction: column; 
-    align-items: center;
+    flex-direction: column;
   }
 
   li {
@@ -178,7 +184,15 @@ ul.topnav {
 .notice {
   height: 720px;
   justify-content: center;
-
+  @media (max-width: 900px) {
+    height: 600px;
+  }
+  @media (max-width: 769px) {
+    height: 620px;
+  }
+  @media (max-width: 356px) {
+    height: 520px;
+  }
   &_img {
     overflow: hidden;
     max-width: 400px;
@@ -186,6 +200,9 @@ ul.topnav {
     max-width: 100%;
     height: 300px;
     object-fit: cover;
+    @media (max-width: 356px) {
+      height: 200px;
+    }
   }
 
   &_title {
@@ -198,12 +215,16 @@ ul.topnav {
     height: 280px;
   }
 }
-
 .spotify_list {
   width: 100%;
   height: 600px;
   border-radius: 12px;
+  @media (max-width: 376px) {
+   height: 600px;   
+  }
 }
+
+
 
 .principal_notice {
   width: 100%;
@@ -234,7 +255,7 @@ ul.topnav {
     height: 100%;
     object-fit: cover;
     border-radius: 2px;
-    border: 2px solid rgb(194, 194, 194);
+    border: 2px solid #aaa;
   }
 }
 
@@ -273,6 +294,90 @@ ul.topnav {
 
 /* CONTACTO */
 
+/*ENTREVISTAS*/
+.article {
+  &_principal {
+    text-align: center;
+    justify-content: center;
+
+    iframe {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      height: 350px;
+      width: 600px;
+      @media (max-width: 769px) {
+        height: 300px;
+        width: 500px;
+      }
+      @media (max-width: 600px) {
+        height: 250px;
+        width: 450px;
+      }
+      @media (max-width: 440px) {
+        height: 250px;
+        width: 350px;
+      }
+      @media (max-width: 376px) {
+        height: 200px;
+        width: 300px;
+      }
+    }
+    h1 {
+      @media (max-width: 440px) {
+        font-size: 30px;
+        margin-bottom: 20px;
+      }
+    }
+    p {
+      text-align: justify;
+      margin-top: 20px;
+    }
+  }
+  &_secondary {
+    &_container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      @media (max-width: 600px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+
+    &_item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      @media (max-width: 769px) {
+        flex-direction: column;
+        text-align: center;
+      }
+      iframe {
+        width: 220px;
+        height: 120px;
+        @media (max-width: 900px) {
+          width: 200px;
+          height: 100px;
+          margin-bottom: 20px;
+        }
+        @media (max-width: 600px) {
+          width: 300px;
+          height: 200px;
+        }
+      }
+
+      h3 {
+        font-size: 15px;
+        margin-left: 10px;
+        @media (max-width: 600px) {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+/*ENTREVISTAS*/
+
 @media screen and (max-width: 990px) {
   .principal_notice .principal_img {
     width: 500px;
@@ -287,10 +392,6 @@ ul.topnav {
   .secondary_img {
     width: 330px;
     height: 200px;
-  }
-
-  .notice {
-    height: 600px;
   }
 
   .notice_body {
@@ -363,5 +464,11 @@ ul.topnav {
 
   .carousel img {
     height: 200px;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .carousel img {
+    height: 170px;
   }
 }
