--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -380,6 +380,54 @@ ul.topnav li.right {
 }
 
 /*ENTREVISTAS*/
+/*PROXIMOS CONCIERTOS*/
+.banner_concert {
+  box-shadow: -6.891px 24.032px 76px 0px rgba(102, 69, 118, 0.34);
+  border-radius: 20px;
+  margin-top: 20px;
+  height: 370px;
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  background: #1955fd;
+}
+@media (max-width: 769px) {
+  .banner_concert {
+    height: 300px;
+    width: 900px;
+  }
+}
+@media (max-width: 500px) {
+  .banner_concert {
+    height: 200px;
+    width: 680px;
+  }
+}
+@media (max-width: 376px) {
+  .banner_concert {
+    height: 150px;
+    width: 650px;
+  }
+}
+.banner_concert img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+}
+.banner_concert img:hover {
+  opacity: 0.5;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+/*PROXIMOS CONCIERTOS*/
 @media screen and (max-width: 990px) {
   .principal_notice .principal_img {
     width: 500px;
